--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -63,3 +63,24 @@ textarea:focus {
   box-shadow: 0 0 0 3px rgba(165, 180, 252, 0.4);
 }
 
+/* Fichiers dans l'explorateur */
+#explorer a {
+  @apply text-black hover:text-blue-500;
+  font-size: 14px;
+}
+
+#explorer {
+  font-family: 'Menlo', 'Monaco', 'Courier New', Courier, monospace;
+  background-color: #FAFAFA;
+  color: #2E2E2E;
+  line-height: 1.6;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 1px solid #E5E7EB; /* Gris clair */
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
+  resize: none;
+}
+
+
+
+
