--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,10 @@
     <h2 class="text-2xl font-bold text-gray-700 mb-6 text-center">Inscription</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <div class="mb-4">
+      <!--<div class="mb-4">
         <%= f.label :username, class: "block text-gray-600 mb-2" %>
         <%= f.text_field :username, autofocus: true, class: "w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-300" %>
-      </div>
+      </div>-->
 
       <div class="mb-4">
         <%= f.label :email, class: "block text-gray-600 mb-2" %>
